# t5_ai_coffee

./: .gitignore  CMakeLists.txt  R.h  README.md  date2ver  main.cc
3rdpart/: CMakeLists.txt
3rdpart/ARM_NEON_2_x86_SSE/: CMakeLists.txt
assets/animator/: home_tab_bg_anim.xml  qrcode_state_anim.xml  wifi_state_anim.xml
assets/color/: text_select_home_info.xml  text_select_pop_bean.xml  text_select_pop_step.xml  text_select_pop_step_handwash.xml  text_select_reset_setting.xml  text_select_scale_cal.xml  text_select_tab.xml
assets/drawable/: bg_clean_progress.xml  bg_clean_progress_rolling.xml  bg_home_puress_anim.xml  bg_home_puress_anim_pic.xml  bg_r15_brown_gradient.xml  bg_r15_brown_gradient_select.xml  bg_r21_brown_gradient.xml  bg_r23_rvpick.xml  bg_r23_rvpick_activaed.xml  bg_r23_rvpick_unactivaed.xml  bg_r24_clean_card_bottom_30.xml  bg_r24_scale_cal_card.xml  bg_r24_setting_card.xml  bg_r24_setting_reset_select.xml  bg_r24_setting_select.xml  bg_r27_pop_grey.xml  bg_r27_pop_grey_tea.xml  bg_r27_rvpick_select.xml  bg_r27_rvpick_select_activaed.xml  bg_r27_rvpick_select_unactivaed.xml  bg_r30_tab_select.xml  bg_r35_tab_brown.xml  bg_r37_set_bean_stroke.xml  bg_r43_brown.xml  bg_toast_r12.xml  bg_wifi_pressed.xml  btn_add_select.xml  btn_bg_r12_black.xml  btn_bg_r19_grey.xml  btn_bg_r19_grey_pressed.xml  btn_bg_r21_brown_select.xml  btn_bg_r27_brown.xml  btn_bg_r27_brown_select.xml  btn_bg_r30_blue.xml  btn_prev_select.xml  btn_r27_brown_level.xml  btn_r30_brown_gradient.xml  btn_r30_brown_gradient_alpha.xml  factory_color_gradient.xml  factory_menu_btn.xml  (+50 more)
assets/layout/: fav_card_layout.xml  home_info_layout_cup.xml  home_info_layout_form.xml  home_info_layout_plot.xml  home_layout_coffee.xml  home_layout_fav_list.xml  home_layout_tea_list.xml  keyboard.xml  main_window.xml  numpicker_hor_layout.xml  numpicker_ver_bebas_layout.xml  numpicker_ver_pop_flowrate.xml  numpicker_ver_pop_layout.xml  numpicker_ver_tea_step_pop_layout.xml  page_clean.xml  page_factory.xml  page_factory_kd.xml  page_home.xml  page_keyboard.xml  page_scale_calibration.xml  page_screensaver.xml  page_setting.xml  pop_bean.xml  pop_layout_handwash.xml  pop_layout_master_espresso.xml  pop_layout_picker.xml  pop_layout_set_time.xml  pop_layout_tea.xml  pop_layout_tea_rebrew.xml  pop_normal.xml  pop_warn.xml  rvpicker_ver_select_layout.xml  status_bar_left.xml  tea_card_layout.xml  wifi_card_layout.xml
assets/values/: ID.xml  colors.xml  factory.xml  keyboard.xml  styles.xml
conf/: cdroid_series_conf.h  version.h
docs/: endOTA.sh  mode.json  prompt.md  upgrade.sh
fonts/: fonts.conf
src/common/: comm_class.cc  comm_class.h  comm_func.cc  comm_func.h  common.h  crc.cc  crc.h  hv_defualt_config.h  hv_icmp.c  hv_icmp.h  hv_net.c  hv_net.h  hv_series_conf.h  hv_version.h  json_func.cc  json_func.h
src/data/: base_data.h  conf_mgr.cc  conf_mgr.h  data.cc  data.h  project.cc  project.h
src/i2c/: hw_i2c_impl.cc  hw_i2c_impl.h  i2c_client.cc  i2c_client.h  i2c_mcu.cc  i2c_mcu.h  sw_i2c.c  sw_i2c.h  sw_i2c_gpio.c  sw_i2c_gpio.h
src/net/: client.cc  client.h  curl_manager.cc  curl_manager.h  curldownload.cc  curldownload.h  hv_wifi_sta.cc  hv_wifi_sta.h  ota.cc  ota.h  socket_client.cc  socket_client.h  socket_server.cc  socket_server.h  wpa_ctrl.c  wpa_ctrl.h
src/protocol/: btn_mgr.cc  btn_mgr.h  cmd_handler.cc  cmd_handler.h  conn_mgr.cc  conn_mgr.h  ipacket_buffer.h  mcu_ui.h  packet_buffer.cc  packet_buffer.h  proto.h  t5_conn_mgr.cc  t5_conn_mgr.h  tcp_client.cc  tcp_client.h  tcp_conn_mgr.cc  tcp_conn_mgr.h  tuya_os_mgr.cc  tuya_os_mgr.h  uart_client.cc  uart_client.h
src/uart/: uart.cc  uart.h  uart2socket.h
src/viewlibs/: arc_seekbar.cc  arc_seekbar.h  cdroid_keyboard.cc  cdroid_keyboard.h  cyplotobject.cc  cyplotobject.h  cyplotview.cc  cyplotview.h  gaussFilter.c  gaussFilter.h  gaussfilterdrawable.cc  gaussfilterdrawable.h  gaussianblur.cc  gaussianblur.h  libs.h  (+12 more)
tuya/: tuya_gw.cc  tuya_gw.h
(+102 files in other folders)
